<resources>
    <string name="app_name">Unique Id Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentication_fragment">Authentication fragment</string>
    <string name="verification_fragment">Verification Fragment</string>
    <string name="symm_enc">Symmetric encryption</string>
    <string name="asymm_enc">Asymmetric encryption</string>
    <string name="insert_msg">Insert your message here</string>
    <string name="start_auth">Send message</string>
    <string name="insert_ip">Insert ip address</string>
    <string name="verify_btn">Verify</string>
    <string name="use_iccid">Use ICCID</string>
</resources>